# todo

./: .gitignore  Dockerfile  docker-compose.yml  main.py  nginx.conf  pyproject.toml  settings.py
admin/: resources.py  routes.py
app/: db.py  main.py  models.py
app/migrations/models/: 0_20210319113302_init.sql
app/routers/: tasks.py
configs/: db.py
core/: celery_app.py  celery_worker.py
models/: __init__.py  admin.py  tasks.py
routers/: tasks.py
todo/: db.py  main.py  models.py
todo/core/: celery_app.py  celery_worker.py
todo/routers/: tasks.py
utils/: db.py  task_crud.py
